kubernetes/haproxy-controller/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-kubernetes-ingress
  namespace: haproxy-controller
spec:
  ports:
  - name: http
    nodePort: 80
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 443
    port: 443
    protocol: TCP
    targetPort: 443
  - name: stat
    nodePort: 1024
    port: 1024
    protocol: TCP
    targetPort: 1024
