kubernetes/haproxy-controller/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-test
  annotations: {}
spec:
  ingressClassName: haproxy
  rules:
  - host: haproxy.apps.homenet
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: haproxy-kubernetes-ingress
            port: 
              name: http
